--- a/LandingSite/index.html
+++ b/LandingSite/index.html
@@ -1,10 +1,16 @@
 <html <!DOCTYPE html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-        <title>James Family</title>
-    </head>
-    <body>
-        <div id="navbardiv"><nav><a href="farm/farm.html">Farm</a><br><a href="Webdev/index.html">Webdev sandbox</a></nav></div>
-        <div><img src="./images/james.jpg" alt="The James family coat of arms."></div>
-    </body>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>James Family</title>
+</head>
+<body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="farm/farm.html">Farm</a></li>
+            <li><a href="Webdev/index.html">Webdev sandbox</a></li>
+        </ul>
+    </nav>
+    <div><img src="./images/james.jpg" alt="The James family coat of arms."></div>
+</body>
+
 </html>
